# transit-hep

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  collected_metrics.csv  command2debug.py  commands.sh  docker_commands.sh  lines.txt  pyproject.toml  requirements.txt  tasks.py  twinturbo_model_backup.py
autorew/: setup.py
autorew/config/: autorev_dev.yaml  autorew_dev.yaml  cathode.yaml  full_run.yaml
autorew/scripts/: create_dummy_data.py  evaluation.py  export_weighted_data.py  full_run.py  train.py
autorew/src/: mlp.py
config/: plot.yaml  predict.yaml  train.yaml
config/common/: default.yaml
config/datamodule/: mnist.yaml
config/hydra/: default.yaml
config/load_datamodule/: mnist.yaml
config/load_model/: cnn.yaml
config/load_predict_set/: mnist.yaml
config/model/: cnn.yaml
config/plot_def/: paper.yaml  rocs.yaml
config/trainer/: default.yaml
hyperproject/data/: mnist.py
hyperproject/models/: cnn.py
hyperproject/utils/: torchutils.py
libs_snap/jet-utilities/: .gitignore  .gitlab-ci.yml  data_loading_example.yml
libs_snap/jobs/: train_disc_LL_idealised.sh  train_disc_LL_supervised.sh
libs_snap/linearanomaly/: .gitignore  .gitlab-ci.yml  .gitmodules  anomaly.sh  curtains_cwola.py  cwola.py  export_template.py  grid.py  pyproject.toml  requirements.txt
mattstools/mattstools/: modules.py  modules_myy.py  torch_utils.py  (+1 more)
scripts/: plot.py  predict.py  train.py
tests/: test_conv_classifier.py  test_mnist_datamod.py  test_pipeline.py
transit/: setup.py
twinturbo/: cwola.py  setup.py
workflow/: main.smk
(+1853 files in other folders)
