[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperproject"
description = "hyperproject"
readme = "README.md"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["hyperproject"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
filterwarnings = [
    '''ignore:Deprecated call to `pkg_resources.declare_namespace\('lightning.*'\)`.:DeprecationWarning''',
    '''ignore:Deprecated call to `pkg_resources.declare_namespace\('google'\)`.:DeprecationWarning''',
    '''ignore:pkg_resources is deprecated as an API:DeprecationWarning''',
    '''ignore:Starting from v1\.9\.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found.:Warning''',
]
